[project]
name = "draft"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "einops>=0.8.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "sortedcontainers>=2.4.0",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "unique-namer>=1.6.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 120

# [tool.ruff.format]
# exclude = ["Externals/*"]
